adding gitignore and test

--- a/modelo_copin/main_mestrado.tex
+++ b/modelo_copin/main_mestrado.tex
@@ -61,7 +61,7 @@ showstringspaces=false
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\Titulo{Diferenças Entre Gêneros Quanto as Suas Contribuições em Comunidades de Perguntas e Respostas}
+\Titulo{Diferenças Entre Gêneros Quanto as Suas Contribuições em Comunidades de Perguntas}
 \Autor{Milena Sales Araujo}
 \Data{30/04/2015}
 \Area{Ciência da Computação}
