--- a/modelo_copin/metodos.tex
+++ b/modelo_copin/metodos.tex
@@ -2,4 +2,5 @@
 
 \begin{itemize}
 \item Colocar exemplos de inferência de gênero utilizando o classificador automático;
+\item teste
 \end{itemize}
