Começando com os pontos

--- a/modelo_copin/introducao.tex
+++ b/modelo_copin/introducao.tex
@@ -1,21 +1,22 @@
-\chapter{Introdu\c{c}\~{a}o}
+\chapter{Introdução}
 
 \begin{itemize}
-\item apresentação geral do assunto do trabalho;
-\item definição sucinta e objetivo do tema abordado;
-\item justificativa sobre a escolha do tema e métodos empregados;
-\item delimitação precisa das fronteiras da pesquisa em relação ao campo e períodos abrangidos;
-\item esclarecimentos sobre o ponto de vista sob o qual o assunto será tratado;
-\item relacionamento do trabalho com outros da mesma área;
-\item objetivos e finalidades da pesquisa, com especificação dos aspectos que serão ou não abordados;
-\item a proposição poderá ser apresentada em capítulo à parte. 
+	\item Comunidades de perguntas e respostas e sua importância nos dias de hoje;
+	\item A importância da diversidade em uma comunidade;
+	\item Desigualdade de gênero em tecnologia;
+	\item Mulheres deixando o ramo antes e em maior quantidade do que homens;
+	\item Razões para mulheres estarem deixando a carreira: estereótipos, unfriendlyness, falta de espaço;
+	\item Consequências: mulheres não se identificam tanto, deixam de participar de comunidades de tecnologia, conteúdo enviesado;
+	\item Existem estudos de gênero em várias comunidades online, mas não nas comunidades do StackExchange como todo;
+	\item Objetivo: estudar o "efeito" de identificar seu gênero em comunidades do StackExchange com relação à participação, percepção de qualidade de conteúdo, tempo de atividade no site, quantidade de contribuições ao longo do tempo e proporção de usuários ativos ao longo do tempo.
+	\item Importância de estudar essas comunidades;
+	\item Responder: Por que os posts das mulheres seria diferente dos feitos por homens?
+	\item Mulheres tendem a se identificar menos, mas isso não é relevante, já que nós queremos ver o impacto que "ser mulher" nestas comunidades tem na participação destes usuários.
+	\item Estudamos os usuários que participaram da comunidade com pelo menos uma contribuição textual (comentário, pergunta ou resposta), que possuam reputação que os permita fazer todos os tipos de contribuições textuais (50 pontos) e que tenha seu gênero facilmente identificável pelos demais usuários.
+	\begin{itemize}
+		\item todas as contribuições de todos os usuários que se encaixam neste padrão, desde a criação da comunidade até setembro de 2014, foram levadas em consideração para este estudo.
+	\end{itemize}
+	\item Esperávamos que os resultados encontrados aqui batessem com o estereótipo de que mulheres não participam de comunidades online e principalmente àquelas sobre tecnologia.
+	\item Mulheres tendem a participar tanto quanto ou até mais do que homens na maioria das comunidades voltada para tecnologia. 
+	\item Este resultado é importante para acabar com estereótipos e mostrar que mulheres podem e tem seu espaço garantido em comunidades online e comunidades online sobre tecnologia.
 \end{itemize}
-
-\begin{itemize}
-\item Vamos estudar aqueles usuários os quais seus colegas podem fácilmente inferir o gênero;
-\item O que podemos aprender fazendo estas comparações?
-\item Por que os posts das mulheres seria diferente dos feitos por homens?
-
-\end{itemize}
-
-Mulheres tendem a se identificar menos, mas isso não é relevante, já que nós queremos ver o impacto que "ser mulher" nestas comunidades tem na participação destes usuários.
