--- a/modelo_copin/main_mestrado.tex
+++ b/modelo_copin/main_mestrado.tex
@@ -147,7 +147,7 @@ showstringspaces=false
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% BIbliografia
+%% Bibliografia
 %% Coloque suas referencias no arquivo ref.bib e descomente as proximas duas linhas
 
 \bibliographystyle{plain} % estilo de bibliografia   plain,unsrt,alpha,abbrv.
