--- a/modelo_copin/metodos.tex
+++ b/modelo_copin/metodos.tex
@@ -1,6 +1,42 @@
 \chapter{Metodologia}
 
 \begin{itemize}
-\item Colocar exemplos de inferência de gênero utilizando o classificador automático;
-\item teste
+	\item Todas as comunidades foram estudadas. As comunidades são divididas em cinco categorias: Tecnologia, Cultura e Recreação, Negócios, Vida e Artes, Profissional e Ciência.
+	\item Foi utilizado o dump disponibilizado pelo StackExchange no Archive.org datado de Setembro de 2014. Falar sobre licensa.
+	\item Nesta sessão irão as hipóteses.
 \end{itemize}
+
+\section{Dados Utilizados} % (fold)
+\label{sub:dados_utilizados}
+
+% section dados_utilizados (end)
+
+\section{Classificador de Gênero} % (fold)
+\label{sub:classificador_de_g_nero}
+\begin{itemize}
+	\item Colocar exemplos de inferência de gênero utilizando o classificador automático;
+	\item
+\end{itemize}
+
+% section classificador_de_g_nero (end)
+
+\section{Contribuições em Número} % (fold)
+\label{sub:contribui_es_em_numero}
+
+% section contribui_es_em_numero (end)
+
+\section{Qualidade} % (fold)
+\label{sub:qualidade}
+
+% section qualidade (end)
+
+\section{Dedicação} % (fold)
+\label{sub:dedica_o}
+
+% section dedica_o (end)
+
+\section{Contribuições e Cadastros ao Longo do Tempo} % (fold)
+\label{sub:contribui_es_e_cadastros_ao_longo_do_tempo}
+
+% section contribui_es_e_cadastros_ao_longo_do_tempo (end)
+
