--- a/modelo_copin/ref.bib
+++ b/modelo_copin/ref.bib
@@ -1,6 +1,368 @@
+@inproceedings{adamic2008knowledge,
+	Author = {Adamic, Lada A and Zhang, Jun and Bakshy, Eytan and Ackerman, Mark S},
+	Booktitle = {Proceedings of the 17th international conference on World Wide Web},
+	Date-Added = {2013-08-19 01:09:28 +0000},
+	Date-Modified = {2013-08-19 01:09:28 +0000},
+	Organization = {ACM},
+	Pages = {665--674},
+	Title = {Knowledge sharing and yahoo answers: everyone knows something},
+	Year = {2008}}
 
-@MISC{ref1,
-  author        = "Nome do Autor",
-  title         = "Titulo",
-  year          = "2006"
+@article{Vasilescu27092013,
+	author = {Vasilescu, Bogdan and Capiluppi, Andrea and Serebrenik, Alexander}, 
+	title = {Gender, Representation and Online Participation: A Quantitative Study},
+	year = {2013}, 
+	doi = {10.1093/iwc/iwt047}, 
+	URL = {http://iwc.oxfordjournals.org/content/early/2013/09/27/iwc.iwt047.abstract}, 
+	eprint = {http://iwc.oxfordjournals.org/content/early/2013/09/27/iwc.iwt047.full.pdf+html}, 
+	journal = {Interacting with Computers} 
+}
+
+@article{hargittai2006differences,
+  title={Differences in actual and perceived online skills: the role of gender*},
+  author={Hargittai, Eszter and Shafer, Steven},
+  journal={Social Science Quarterly},
+  volume={87},
+  number={2},
+  pages={432--448},
+  year={2006},
+  publisher={Wiley Online Library}
+}
+
+@article{taylor2003multiple,
+  title={Multiple pleasures women and online gaming},
+  author={Taylor, TL},
+  journal={Convergence: The International Journal of Research into New Media Technologies},
+  volume={9},
+  number={1},
+  pages={21--46},
+  year={2003},
+  publisher={Sage Publications}
+}
+
+@article{rustad2011suck,
+  title={" Suck It Up, Princess": Outreach and Diversity in FOSS Communities},
+  author={Rustad, Karen},
+  year={2011}
+}
+
+@article{Gefen:2005:YSS:1066149.1066156,
+ author = {Gefen, David and Ridings, Catherine M.},
+ title = {If You Spoke As She Does, Sir, Instead of the Way You Do: A Sociolinguistics Perspective of Gender Differences in Virtual Communities},
+ journal = {SIGMIS Database},
+ issue_date = {Spring 2005},
+ volume = {36},
+ number = {2},
+ month = jun,
+ year = {2005},
+ issn = {0095-0033},
+ pages = {78--92},
+ numpages = {15},
+ url = {http://doi.acm.org/10.1145/1066149.1066156},
+ doi = {10.1145/1066149.1066156},
+ acmid = {1066156},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {community quality, gender, responsiveness, social support, virtual communities},
+} 
+
+
+@article{thelwall2008social,
+  title={Social networks, gender, and friending: An analysis of MySpace member profiles},
+  author={Thelwall, Mike},
+  journal={Journal of the American Society for Information Science and Technology},
+  volume={59},
+  number={8},
+  pages={1321--1330},
+  year={2008},
+  publisher={Wiley Online Library}
+}
+
+
+@article{glott2010wikipedia,
+  title={Wikipedia survey--overview of results},
+  author={Glott, Ruediger and Schmidt, Philipp and Ghosh, Rishab},
+  journal={United Nations University: Collaborative Creativity Group},
+  year={2010}
+}
+
+@inproceedings{antin2011gender,
+  title={Gender differences in Wikipedia editing},
+  author={Antin, Judd and Yee, Raymond and Cheshire, Coye and Nov, Oded},
+  booktitle={Proceedings of the 7th International Symposium on Wikis and Open Collaboration},
+  pages={11--14},
+  year={2011},
+  organization={ACM}
+}
+
+@misc{Hyland:2013:Online,
+  	author = {Hyland, Adam},
+	title = {Global Name Data},
+	month = {jun},
+	year = 2013,
+  	howpublished = {\url{http://bocoup.com/weblog/global-name-data/}},
+  	note = {Accessed: 2014-05-28}
+}
+
+@inproceedings{furtado2013contributor,
+  title={Contributor profiles, their dynamics, and their importance in five q\&a sites},
+  author={Furtado, Adabriand and Andrade, Nazareno and Oliveira, Nigini and Brasileiro, Francisco},
+  booktitle={Proceedings of the 2013 conference on Computer supported cooperative work},
+  pages={1237--1252},
+  year={2013},
+  organization={ACM}
+}
+
+@article{gneezy2003performance,
+  title={Performance in competitive environments: Gender differences},
+  author={Gneezy, Uri and Niederle, Muriel and Rustichini, Aldo},
+  journal={The Quarterly Journal of Economics},
+  volume={118},
+  number={3},
+  pages={1049--1074},
+  year={2003},
+  publisher={Oxford University Press}
+}
+
+@inproceedings{lam2011wp,
+  title={WP: clubhouse?: an exploration of Wikipedia's gender imbalance},
+  author={Lam, Shyong Tony K and Uduwage, Anuradha and Dong, Zhenhua and Sen, Shilad and Musicant, David R and Terveen, Loren and Riedl, John},
+  booktitle={Proceedings of the 7th International Symposium on Wikis and Open Collaboration},
+  pages={1--10},
+  year={2011},
+  organization={ACM}
+}
+
+@article{marshall1975boys,
+  title={Boys and girls together: Sexual composition and the effect of density and group size on cohesiveness.},
+  author={Marshall, Joan E and Heslin, Richard},
+  journal={Journal of Personality and Social Psychology},
+  volume={31},
+  number={5},
+  pages={952},
+  year={1975},
+  publisher={American Psychological Association}
+}
+
+@article{spencer1999stereotype,
+  title={Stereotype threat and women's math performance},
+  author={Spencer, Steven J and Steele, Claude M and Quinn, Diane M},
+  journal={Journal of experimental social psychology},
+  volume={35},
+  number={1},
+  pages={4--28},
+  year={1999},
+  publisher={Elsevier}
+}
+
+@article{karpowitz2012gender,
+  title={Gender inequality in deliberative participation},
+  author={Karpowitz, Christopher F and Mendelberg, Tali and Shaker, Lee},
+  journal={American Political Science Review},
+  volume={106},
+  number={03},
+  pages={533--547},
+  year={2012},
+  publisher={Cambridge Univ Press}
+}
+
+@inproceedings{liu2013s,
+  title={What's in a Name? Using First Names as Features for Gender Inference in Twitter.},
+  author={Liu, Wendy and Ruths, Derek},
+  booktitle={AAAI Spring Symposium: Analyzing Microtext},
+  year={2013}
+}
+
+@incollection{tang2011s,
+  title={What’s in a name: A study of names, gender inference, and gender behavior in facebook},
+  author={Tang, Cong and Ross, Keith and Saxena, Nitesh and Chen, Ruichuan},
+  booktitle={Database Systems for Adanced Applications},
+  pages={344--356},
+  year={2011},
+  publisher={Springer}
+}
+
+@article{campbell1986effects,
+  title={The effects of mathematics task performance on math self-efficacy and task interest},
+  author={Campbell, Nancy K and Hackett, Gail},
+  journal={Journal of Vocational Behavior},
+  volume={28},
+  number={2},
+  pages={149--162},
+  year={1986},
+  publisher={Elsevier}
+}
+
+@inproceedings{burger2011discriminating,
+  title={Discriminating gender on Twitter},
+  author={Burger, John D and Henderson, John and Kim, George and Zarrella, Guido},
+  booktitle={Proceedings of the Conference on Empirical Methods in Natural Language Processing},
+  pages={1301--1309},
+  year={2011},
+  organization={Association for Computational Linguistics}
+}
+
+@misc{google:report,
+  title = {Google’s Workforce Diversity Report},
+    howpublished = {\url{http://www.google.com/diversity/at-google.html}},
+    note = {Accessed: 2014-09-19}
+}
+
+@misc{linkedin:report,
+  title = {LinkedIn’s Workforce Diversity Report},
+    howpublished = {\url{http://blog.linkedin.com/2014/06/12/linkedins-workforce-diversity/}},
+    note = {Accessed: 2014-09-19}
+}
+
+@inproceedings{schenk2013geo,
+  title={Geo-locating the knowledge transfer in StackOverflow},
+  author={Schenk, Dennis and Lungu, Mircea},
+  booktitle={Proceedings of the 2013 International Workshop on Social Software Engineering},
+  pages={21--24},
+  year={2013},
+  organization={ACM}
+}
+
+@article{nixon1999educational,
+  title={The educational attainment of young women: Role model effects of female high school faculty},
+  author={Nixon, Lucia A and Robinson, Michael D},
+  journal={Demography},
+  volume={36},
+  number={2},
+  pages={185--194},
+  year={1999},
+  publisher={Springer}
+}
+
+@article{smith1986effect,
+  title={Effect of women science career role models on early adolescents' attitudes toward scientists and women in science},
+  author={Smith, Walter S and Erb, Thomas Owen},
+  journal={Journal of Research in Science Teaching},
+  volume={23},
+  number={8},
+  pages={667--676},
+  year={1986},
+  publisher={Wiley Online Library}
+}
+
+/////// Not cited
+
+@inproceedings{farzan2011increasing,
+  title={Increasing commitment to online communities by designing for social presence},
+  author={Farzan, Rosta and Dabbish, Laura A and Kraut, Robert E and Postmes, Tom},
+  booktitle={Proceedings of the ACM 2011 conference on Computer supported cooperative work},
+  pages={321--330},
+  year={2011},
+  organization={ACM}
+}
+
+@inproceedings{anderson2012discovering,
+  title={Discovering value from community activity on focused question answering sites: a case study of stack overflow},
+  author={Anderson, Ashton and Huttenlocher, Daniel and Kleinberg, Jon and Leskovec, Jure},
+  booktitle={Proceedings of the 18th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={850--858},
+  year={2012},
+  organization={ACM}
+}
+
+@misc{ngcp:statistics,
+  title = {National Girls Collaborative Project - Statistics},
+    howpublished = {\url{http://www.ngcproject.org/statistics}},
+    note = {Accessed: 2014-05-31}
+}
+
+@article{blum2007cultural,
+  title={A cultural perspective on gender diversity in computing},
+  author={Blum, Lenore and Frieze, Carol and Hazzan, Orit and Dias, M Bernardine},
+  journal={Reconfiguring the firewall: recruiting women to information technology across cultures and continents. AK Peters, Ltd, Wellesley, MA},
+  year={2007}
+}
+
+@article{herring1999rhetorical,
+  title={The rhetorical dynamics of gender harassment on-line},
+  author={Herring, Susan C},
+  journal={The Information Society},
+  volume={15},
+  number={3},
+  pages={151--167},
+  year={1999},
+  publisher={Taylor \& Francis}
+}
+
+@inproceedings{meyer2006assessing,
+  title={Assessing the attack threat due to irc channels},
+  author={Meyer, Robert and Cukier, Michel},
+  booktitle={Dependable Systems and Networks, 2006. DSN 2006. International Conference on},
+  pages={467--472},
+  year={2006},
+  organization={IEEE}
+}
+
+@article{wenger2005communities,
+  title={Communities of practice: A brief introduction},
+  author={Wenger, Etienne},
+  year={2011},
+  booktitle={STEP Leadership Workshop, University of Oregon}
+  publisher={National Science Foundation (US)}
+}
+
+@article{preece2003online,
+  title={Online communities: focusing on sociability and usability},
+  author={Preece, Jenny and Maloney-Krichmar, Diane},
+  journal={Handbook of human-computer interaction},
+  pages={596--620},
+  year={2003},
+  publisher={Lawrence Erlbaum Publishers, Mahwak: NJ}
+}
+
+@article{mcmillan1986sense,
+  title={Sense of community: A definition and theory},
+  author={McMillan, David W and Chavis, David M},
+  journal={Journal of community psychology},
+  volume={14},
+  number={1},
+  pages={6--23},
+  year={1986},
+  publisher={John Wiley \& Sons, Inc.}
+}
+
+@article{ren2012building,
+  title={Building Member Attachment in Online Communities: Applying Theories of Group Identity and Interpersonal Bonds.},
+  author={Ren, Yuqing and Harper, F Maxwell and Drenner, Sara and Terveen, Loren G and Kiesler, Sara B and Riedl, John and Kraut, Robert E},
+  journal={Mis Quarterly},
+  volume={36},
+  number={3},
+  pages={841--864},
+  year={2012}
+}
+
+@inproceedings{collier2012conflict,
+  title={Conflict, criticism, or confidence: an empirical examination of the gender gap in wikipedia contributions},
+  author={Collier, Benjamin and Bear, Julia},
+  booktitle={Proceedings of the ACM 2012 conference on Computer Supported Cooperative Work},
+  pages={383--392},
+  year={2012},
+  organization={ACM}
+}
+
+@article{hyde1990gender,
+  title={Gender comparisons of mathematics attitudes and affect},
+  author={Hyde, Janet Shibley and Fennema, Elizabeth and Ryan, Marilyn and Frost, Laurie A and Hopp, Carolyn},
+  journal={Psychology of women Quarterly},
+  volume={14},
+  number={3},
+  pages={299--324},
+  year={1990},
+  publisher={Wiley Online Library}
+}
+
+@article{campbell1986effects,
+  title={The effects of mathematics task performance on math self-efficacy and task interest},
+  author={Campbell, Nancy K and Hackett, Gail},
+  journal={Journal of Vocational Behavior},
+  volume={28},
+  number={2},
+  pages={149--162},
+  year={1986},
+  publisher={Elsevier}
 }
